--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,8 @@
+@charset "utf-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
     .blur {
         -webkit-backdrop-filter: saturate(150%) blur(10px);
@@ -131,7 +136,7 @@ body {
     var(--md-sys-color-background);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: 'Roboto';
+    font-family: 'Roboto Flex', sans-serif;
     transition: all 0.5s linear;
 
     display: grid;
