--- a/CSS/main.css
+++ b/CSS/main.css
@@ -123,20 +123,24 @@ header {
     grid-row: 1 / -1;
     margin: 25px 0 0;
     height: 60px;
-    width: 80px;
+    width: 100%;
 }
 header > span {
     grid-column: 2 / -1;
     grid-row: 1 / -1;
-    height: 43px;
+    height: 36px;
     font-size: 32px;
     font-weight: 400;
     line-height: 40px;
-    font-stretch: 140%;
+    font-stretch: 150%;
     color: var(--md-sys-color-on-primary);
-    
+
     display: flex;
-    align-items: flex-end;
+    align-items: baseline;
+    gap: 10px;
+}
+header > span span {
+    font-size: 22px;
 }
 
 /* Nav ----------------------------------------------------------- */
