--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -1,5 +1,5 @@
 @media only screen and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 2) {
-    body {
+    root {
         background: var(--md-sys-color-background);
 
         display: grid;
@@ -28,25 +28,44 @@
     header {
         position: fixed;
         width: 100%;
-        height: 50px;
-        padding: 0 10px;
-        z-index: 10;
+        z-index: 999;
+        /* background: var(--md-sys-color-primary); */
+        /* filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.5)); */
 
-        background: #1b4352;
-        box-shadow: 0px 1px 2px rgb(0 0 0 / 15%), 0px 2px 6px 2px rgb(0 0 0 / 15%);
-
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+        -webkit-backdrop-filter: saturate(150%) blur(10px);
+        backdrop-filter: saturate(150%) blur(10px);
+        background: linear-gradient(to bottom, 
+        rgba(var(--md-sys-color-primary--rgb), 0.9), 
+        rgba(var(--md-sys-color-primary--rgb), 0.9));
+        box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2);
+        
+        display: grid;
+        grid: 40px / 50px 1fr;
+        gap: 0;
     }
+    /* header:before {
+        content: "";
+        position: absolute;
+        left: 16px;
+        top: 100%;
+        width: 4px;
+        height: 0;
+        border-top: 12px solid var(--md-sys-color-primary);
+        border-right: 12px solid transparent;
+        border-left: 12px solid transparent;
+    } */
     .logo {
-        height: 40px;
-        width: 100px;
+        margin: 0;
+        height: 30px;
+        z-index: 1;
     }
     header > span {
-        font-size: 16px;
+        font-size: 24px;
         font-weight: 300;
         color: var(--md-sys-color-on-primary);
+    }
+    header > span span {
+        font-size: 14px;
     }
     .mobile-sort {
         grid-column: 3 / 4;
@@ -67,7 +86,7 @@
         overflow: hidden;
         transition: height 0.2s linear;
         
-        display: grid;
+        display: none;
         grid: 50px / 1fr 1fr;
 
         -webkit-backdrop-filter: saturate(150%) blur(10px);
@@ -77,17 +96,6 @@
         rgba(var(--md-sys-color-primary--rgb), 0.08)), 
         rgba(var(--md-sys-color-surface--rgb), 0.8);
     }
-    .sort-shadow {
-        box-shadow: 0px 1px 2px rgb(0 0 0 / 15%), 0px 2px 6px 2px rgb(0 0 0 / 15%);
-    }
-    .sort > div {
-        flex-direction: row-reverse;
-        color: var(--md-sys-color-on-surface);
-        font-size: 14px;
-    }
-    .sort > div > input, .sort > div > input:hover {
-        color: var(--md-sys-color-on-surface);
-    }
 
     /* Nav ----------------------------------------------------------- */
     nav {
@@ -95,7 +103,7 @@
         width: 100%;
         bottom: 0;
         padding: 12px 0 16px;
-        z-index: 10;
+        z-index: 999;
 
         display: flex;
         flex-direction: row;
@@ -107,7 +115,7 @@
         rgba(var(--md-sys-color-primary--rgb), 0.08), 
         rgba(var(--md-sys-color-primary--rgb), 0.08)), 
         rgba(var(--md-sys-color-surface--rgb), 0.8);
-        box-shadow: 0px 1px 2px rgba(0 0 0 / 15%), 0px 2px 6px 2px rgba(0 0 0 / 15%);
+        box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2);
     }
     nav > div {
         height: 52px;
@@ -126,7 +134,7 @@
         height: 32px;
         border-radius: 16px;
     }
-    .tile {
+    .card {
         margin: 10px 0 0;
         padding: 5px;
         font-size: 12px;
@@ -160,5 +168,12 @@
     }
     .original-title, .subtitle {
         padding: 3px 0;
+    }
+
+    .loading {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        top: 0;
     }
 }
