--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -1,59 +1,69 @@
 @media only screen and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 2) {
+    @supports (-webkit-backdrop-filter: saturate(150%) blur(10px)) or (backdrop-filter: saturate(150%) blur(10px)) {
+        header {
+            -webkit-backdrop-filter: saturate(150%) blur(10px);
+            backdrop-filter: saturate(150%) blur(10px);
+            background: linear-gradient(to bottom, 
+            rgba(var(--md-sys-color-primary--rgb), 0.9), 
+            rgba(var(--md-sys-color-primary--rgb), 0.9));
+        }
+        nav {
+            -webkit-backdrop-filter: saturate(150%) blur(10px);
+            backdrop-filter: saturate(150%) blur(10px);
+            background: linear-gradient(300deg, 
+            rgba(var(--md-sys-color-primary--rgb), 0.08), 
+            rgba(var(--md-sys-color-primary--rgb), 0.08)), 
+            rgba(var(--md-sys-color-surface--rgb), 0.8);
+        }
+    }
+    @supports not ((-webkit-backdrop-filter: saturate(150%) blur(10px)) or (backdrop-filter: saturate(150%) blur(10px))) {
+        header {
+            background: var(--md-sys-color-primary);
+        }
+        nav {
+            background: linear-gradient(300deg, 
+            rgba(var(--md-sys-color-primary--rgb), 0.08), 
+            rgba(var(--md-sys-color-primary--rgb), 0.08)), 
+            var(--md-sys-color-surface);
+        }
+    }
+
     root {
         background: var(--md-sys-color-background);
 
         display: grid;
-        grid: 50px 1fr 0px 80px / 1fr;
+        grid: 1fr 80px / 1fr;
         grid-template-areas:
-        "h"
         "m"
-        "f"
         "n";
-        justify-content: flex-start;
     }
     main {
         height: auto;
-        min-height: calc(100vh - 130px);
+        min-height: 100vh;
         border-radius: 0;
         margin: 0;
-        padding: 8px;
-    
+        padding: 50px 8px 8px;
+
         display: grid;
-        grid-template-columns: repeat(auto-fit, 100%);
+        grid-template-columns: repeat(auto-fill, 100%);
         justify-content: space-between;
         gap: 8px;
     }
     
-    /* Header -------------------------------------------------------- */
-    header {
+    header,
+    nav {
         position: fixed;
         width: 100%;
         z-index: 999;
-        /* background: var(--md-sys-color-primary); */
-        /* filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.5)); */
-
-        -webkit-backdrop-filter: saturate(150%) blur(10px);
-        backdrop-filter: saturate(150%) blur(10px);
-        background: linear-gradient(to bottom, 
-        rgba(var(--md-sys-color-primary--rgb), 0.9), 
-        rgba(var(--md-sys-color-primary--rgb), 0.9));
         box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2);
-        
+    }
+
+    /* Header -------------------------------------------------------- */
+    header {        
         display: grid;
         grid: 40px / 50px 1fr;
         gap: 0;
     }
-    /* header:before {
-        content: "";
-        position: absolute;
-        left: 16px;
-        top: 100%;
-        width: 4px;
-        height: 0;
-        border-top: 12px solid var(--md-sys-color-primary);
-        border-right: 12px solid transparent;
-        border-left: 12px solid transparent;
-    } */
     .logo {
         margin: 0;
         height: 30px;
@@ -64,7 +74,7 @@
         font-weight: 300;
         color: var(--md-sys-color-on-primary);
     }
-    header > span span {
+    header > span > span {
         font-size: 14px;
     }
     .mobile-sort {
@@ -77,59 +87,38 @@
         outline: none;
     }
     .sort {
-        top: 50px;
-        left: 0;
-        right: 0;
+        bottom: 96px;
+        right: 16px;
         position: fixed;
-        width: 100%;
-        height: 0;
-        overflow: hidden;
-        transition: height 0.2s linear;
-        
-        display: none;
-        grid: 50px / 1fr 1fr;
-
-        -webkit-backdrop-filter: saturate(150%) blur(10px);
-        backdrop-filter: saturate(150%) blur(10px);
-        background: linear-gradient(300deg, 
-        rgba(var(--md-sys-color-primary--rgb), 0.08), 
-        rgba(var(--md-sys-color-primary--rgb), 0.08)), 
-        rgba(var(--md-sys-color-surface--rgb), 0.8);
+        width: min-content;
+        height: min-content;
+        padding: 0;
+    }
+    .sort > div {
+        box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2);
+    }
+    
+    .sort > div:hover {
+        max-width: 56px;
     }
 
     /* Nav ----------------------------------------------------------- */
     nav {
-        position: fixed;
-        width: 100%;
         bottom: 0;
         padding: 12px 0 16px;
-        z-index: 999;
 
         display: flex;
         flex-direction: row;
-        gap: 8px;
-        
-        -webkit-backdrop-filter: saturate(150%) blur(10px);
-        backdrop-filter: saturate(150%) blur(10px);
-        background: linear-gradient(300deg, 
-        rgba(var(--md-sys-color-primary--rgb), 0.08), 
-        rgba(var(--md-sys-color-primary--rgb), 0.08)), 
-        rgba(var(--md-sys-color-surface--rgb), 0.8);
-        box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2);
+        gap: 8px;        
     }
     nav > div {
         height: 52px;
         width: 100%;
-        font-size: 12px;
-        font-weight: 500;
-        color: var(--md-sys-color-on-surface-variant);
-        gap: 4px;
-        cursor: pointer;
     }
     nav > div:hover {
         background: none;
     }
-    nav > div > span {
+    nav > div span {
         width: 64px;
         height: 32px;
         border-radius: 16px;
@@ -169,10 +158,11 @@
     .original-title, .subtitle {
         padding: 3px 0;
     }
-
+    .start-loading-text,
     .loading {
         width: 100%;
         height: 100%;
+        font-size: 24px;
         border-radius: 0;
         top: 0;
     }
