React Router added, mobile version layout changed

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -40,9 +40,7 @@ root {
     padding: 0;
     margin: 0;
     background: linear-gradient(to bottom,
-    var(--md-sys-color-primary),
-    var(--md-sys-color-primary) 80px,
-    rgba(var(--md-sys-color-primary--rgb), 0.02) 80px, 
+    rgba(var(--md-sys-color-primary--rgb), 0.02), 
     rgba(var(--md-sys-color-primary--rgb), 0.02)),
     var(--md-sys-color-background);
     background-attachment: fixed;
@@ -50,26 +48,19 @@ root {
     transition: all 0.5s linear;
 
     display: grid;
-    grid: 50px 1fr 10px / 80px 1fr;
-    grid-template-areas:
-    "h h"
-    "n m"
-    "f f";
+    grid: 50px 30px 1fr 10px / 80px 1fr 10px;
     justify-content: flex-start;
 }
-header { grid-area: h; }
-nav { grid-area: n; }
-main { grid-area: m; }
-footer{ grid-area: f; }
-.mobile-sort { display: none; }
 
 /* Main ----------------------------------------------------------- */
 main {
+    grid-column: 2 / -2;
+    grid-row: 2 / 4;
+
     height: calc(100vh - 60px);
     background: var(--md-sys-color-surface);
     box-shadow: 0px 1px 2px rgb(0, 0, 0, 0.1), 0px 1px 3px 1px rgb(0, 0, 0, 0.2);
     border-radius: 20px;
-    margin: 0 10px 0 0;
     overflow-x: hidden;
     overflow-y: overlay;
 
@@ -88,10 +79,15 @@ main {
 
 /* Header -------------------------------------------------------- */
 header {
+    grid-column: 1 / -1;
+    grid-row: 1 / 3;
+
     display: grid;
     grid: 50px / 80px 1fr;
     align-items: center;    
     gap: 16px;
+
+    background: rgb(27,67,82);
 
     -webkit-touch-callout: none;
       -webkit-user-select: none;
@@ -115,7 +111,7 @@ header > span {
     font-weight: 400;
     line-height: 40px;
     font-stretch: 150%;
-    color: var(--md-sys-color-on-primary);
+    color: rgb(243,244,246);
 
     display: flex;
     align-items: baseline;
@@ -127,6 +123,9 @@ header > span > span {
 
 /* Nav ----------------------------------------------------------- */
 nav {
+    grid-column: 1 / 2;
+    grid-row: 2 / -2;
+
     display: grid;
     grid: 56px 56px 1fr / 100%;
 
@@ -140,7 +139,7 @@ nav {
           -ms-user-select: none;
               user-select: none;
 }
-nav > div {
+nav > a {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -149,10 +148,11 @@ nav > div {
     font-size: 12px;
     font-weight: 500;
     color: var(--md-sys-color-on-surface-variant);
+    text-decoration: none;
     gap: 4px;
     cursor: pointer;
 }
-nav > div > span {
+nav > a > span {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -164,20 +164,20 @@ nav > div > span {
     font-variation-settings: 'FILL' 0, 'wght' 400, 'opsz' 24;
     transition: font-variation-settings 200ms cubic-bezier(0.2, 0, 0, 1);
 }
-nav > div > span:hover {
+nav > a > span:hover {
     background: rgba(var(--md-sys-color-primary--rgb), 0.08);
     font-variation-settings: 'FILL' 0, 'wght' 500, 'opsz' 24;
 }
 
-nav > div.nav-active {
+nav > a.nav-active {
     color: var(--md-sys-color-on-surface);
 }
-nav > div.nav-active span {
+nav > a.nav-active span {
     background: var(--md-sys-color-secondary-container);
     color: var(--md-sys-color-on-secondary-container);
     font-variation-settings: 'FILL' 1, 'wght' 400, 'opsz' 24;
 }
-nav > div.nav-active > span:hover {
+nav > a.nav-active > span:hover {
     background: linear-gradient(0,
     rgba(var(--md-sys-color-primary--rgb), 0.08),
     rgba(var(--md-sys-color-primary--rgb), 0.08)),
@@ -185,7 +185,12 @@ nav > div.nav-active > span:hover {
     font-variation-settings: 'FILL' 1, 'wght' 500, 'opsz' 24;
 }
 .sort {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+
     align-self: end;
+    display: flex;
+    flex-direction: column;
     align-items: start;
     justify-content: flex-end;
     gap: 12px;
