--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -4,16 +4,13 @@
             -webkit-backdrop-filter: saturate(150%) blur(10px);
             backdrop-filter: saturate(150%) blur(10px);
             background: linear-gradient(to bottom, 
-            rgba(var(--md-sys-color-primary--rgb), 0.9), 
-            rgba(var(--md-sys-color-primary--rgb), 0.9));
+            rgba(27,67,82, 1), 
+            rgba(27,67,82, 0.9));
         }
         nav {
             -webkit-backdrop-filter: saturate(150%) blur(10px);
             backdrop-filter: saturate(150%) blur(10px);
-            background: linear-gradient(300deg, 
-            rgba(var(--md-sys-color-primary--rgb), 0.08), 
-            rgba(var(--md-sys-color-primary--rgb), 0.08)), 
-            rgba(var(--md-sys-color-surface--rgb), 0.8);
+            background: rgba(var(--md-sys-color-surface--rgb), 0.8);
         }
     }
     @supports not ((-webkit-backdrop-filter: saturate(150%) blur(10px)) or (backdrop-filter: saturate(150%) blur(10px))) {
@@ -21,10 +18,7 @@
             background: var(--md-sys-color-primary);
         }
         nav {
-            background: linear-gradient(300deg, 
-            rgba(var(--md-sys-color-primary--rgb), 0.08), 
-            rgba(var(--md-sys-color-primary--rgb), 0.08)), 
-            var(--md-sys-color-surface);
+            background: var(--md-sys-color-surface);
         }
     }
 
@@ -32,17 +26,17 @@
         background: var(--md-sys-color-background);
 
         display: grid;
-        grid: 1fr 80px / 1fr;
-        grid-template-areas:
-        "m"
-        "n";
+        grid: 1fr / 1fr;
     }
     main {
+        
+        grid-column: 1 / -1;
+        grid-row: 1 / -1;
         height: auto;
         min-height: 100vh;
         border-radius: 0;
         margin: 0;
-        padding: 50px 8px 8px;
+        padding: 112px 8px 8px;
 
         display: grid;
         grid-template-columns: repeat(auto-fill, 100%);
@@ -54,8 +48,7 @@
     nav {
         position: fixed;
         width: 100%;
-        z-index: 999;
-        box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2);
+        /* box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2); */
     }
 
     /* Header -------------------------------------------------------- */
@@ -63,6 +56,7 @@
         display: grid;
         grid: 40px / 50px 1fr;
         gap: 0;
+        z-index: 800;
     }
     .logo {
         margin: 0;
@@ -72,7 +66,6 @@
     header > span {
         font-size: 24px;
         font-weight: 300;
-        color: var(--md-sys-color-on-primary);
     }
     header > span > span {
         font-size: 14px;
@@ -87,12 +80,13 @@
         outline: none;
     }
     .sort {
-        bottom: 96px;
+        bottom: 16px;
         right: 16px;
         position: fixed;
         width: min-content;
         height: min-content;
         padding: 0;
+        z-index: 100;
     }
     .sort > div {
         box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.1), 0px 1px 3px rgba(0, 0, 0, 0.2);
@@ -104,24 +98,44 @@
 
     /* Nav ----------------------------------------------------------- */
     nav {
-        bottom: 0;
-        padding: 12px 0 16px;
+        top: 40px;
+        height: 64px;
+        padding: 0;
+        z-index: 700;
 
         display: flex;
         flex-direction: row;
-        gap: 8px;        
+        justify-content: space-around;
+        gap: 8px;
+        border-bottom: 1px solid var(--md-sys-color-surface-variant);
     }
-    nav > div {
-        height: 52px;
-        width: 100%;
+    nav > a {
+        gap: 2px;
     }
-    nav > div:hover {
+    nav > a:hover {
         background: none;
     }
-    nav > div span {
-        width: 64px;
-        height: 32px;
-        border-radius: 16px;
+    nav > a > span {
+        width: 24px;
+        height: 24px;
+    }
+    nav > a.nav-active {
+        color: var(--md-sys-color-primary);
+    }
+    nav > a.nav-active > span,
+    nav > a.nav-active > span:hover {
+        background: none;
+        color: var(--md-sys-color-primary);
+    }
+    nav > a.nav-active::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        height: 3px;
+        width: 40px;
+        background: var(--md-sys-color-primary);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
     }
     .card {
         margin: 10px 0 0;
