--- a/src/@styles/header.less
+++ b/src/@styles/header.less
@@ -5,15 +5,15 @@ header {
         fill: var(--md-sys-color-primary);
 
         position: fixed;
-        left: 20px;
-        top: 20px;
-        height: 170px;
+        left: 30px;
+        top: 30px;
+        width: 8vw;
 
         &-mobile {
             fill: var(--md-sys-color-primary);
 
-            max-width: 500px;
-            padding: 0 30px 10px;
+            max-width: 460px;
+            padding: calc(20vh - 10vw) 60px;
         }
     }
 
