--- a/src/@styles/index.less
+++ b/src/@styles/index.less
@@ -57,8 +57,8 @@ body {
     display: flex;
     justify-content: center;
 
-    width: 100vw;
-    overflow-x: hidden;
+    // width: 100vw;
+    // overflow-x: hidden;
 }
 
 #root {
