--- a/src/@styles/main.less
+++ b/src/@styles/main.less
@@ -1,16 +1,57 @@
 main {
-    padding: 10px;
 
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(185px, 1fr));
-    justify-items: center;
-    gap: 10px;
+    &.scrolled md-tabs {
+        position: fixed !important;
+        top: -28px;
+        z-index: 2;
 
-    margin-top: -1px;
-    border-top: 1px solid var(--md-sys-color-outline-variant);
+        width: 100%;
+        max-width: 1225px;
+        border-bottom: 1px solid var(--md-sys-color-outline-variant);
 
-    @media (min-width: 1180px) {
-        border: 1px solid var(--md-sys-color-outline-variant);
-        border-radius: 12px;
+        position: relative;
+        background-color: var(--md-sys-color-surface);
+        opacity: 0.95;
+
+        @media (min-width: 1180px) {
+            margin: 0 -22px;
+            padding: 0 34px !important;
+        }
+
+        md-tab {
+            margin-bottom: -1px;
+        }
     }
+
+    #tabs {
+        height: 65px;
+
+        md-tabs {
+
+            md-tab {
+                md-icon {
+                    --md-icon-font-variation-settings: 'FILL' 0;
+                    transition: .2s linear;
+                }
+
+                &[selected] md-icon {
+                    --md-icon-font-variation-settings: 'FILL' 1;
+                }
+            }
+
+            @media (min-width: 1180px) {
+                padding: 0 12px;
+            }
+
+            @media (min-width: 605px) {
+                justify-content: flex-start;
+
+                md-tab {
+                    max-width: 250px;
+                }
+            }
+        }
+    }
+
+    @import "./cards.less";
 }
