Add tv series info page

--- a/src/@styles/cards.less
+++ b/src/@styles/cards.less
@@ -8,98 +8,101 @@
         border: 1px solid var(--md-sys-color-outline-variant);
         border-radius: 12px;
     }
+}
 
-    .cards {
-        padding: 10px;
+.cards,
+.seasons {
+    padding: 10px;
 
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(185px, 1fr));
+    justify-items: center;
+    gap: 10px;
+
+    @media (max-width: 700px) {
+        grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));
+    }
+
+    .card {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(185px, 1fr));
-        justify-items: center;
-        gap: 10px;
+        grid: repeat(2, min-content) / 1fr;
+        gap: 4px;
 
-        @media (max-width: 605px) {
-            grid-template-columns: repeat(auto-fill, minmax(165px, 1fr));
+        width: 185px;
+
+        cursor: pointer;
+
+        @media (max-width: 1180px) {
+            width: 100%;
         }
 
-        .card {
+        .poster {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            border-radius: 4px;
+            position: relative;
+
+
+            img {
+                width: 100%;
+                aspect-ratio: 185/275;
+                border-radius: inherit;
+            }
+
+            --md-elevation-level: 2;
+        }
+
+        .desc {
+            padding: 0 4px;
+
             display: grid;
-            grid: repeat(2, min-content) / 1fr;
+            grid: 1fr / 1fr 42px;
             gap: 4px;
 
-            width: 185px;
+            color: var(--md-sys-color-on-surface-variant);
 
-            @media (max-width: 1180px) {
-                width: 100%;
-            }
-
-            .poster {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                border-radius: 4px;
+            .rating {
                 position: relative;
+                width: 40px;
+                height: 40px;
 
+                margin-top: -8px;
+                z-index: -1;
 
-                img {
-                    width: 100%;
-                    aspect-ratio: 185/275;
-                    border-radius: inherit;
+                div {
+                    position: absolute;
+                    right: 0px;
                 }
 
-                --md-elevation-level: 2;
-            }
+                .right-container {
+                    width: 50%;
+                    height: 100%;
 
-            .desc {
-                padding: 0 4px;
-
-                display: grid;
-                grid: 1fr / 1fr 42px;
-                gap: 4px;
-
-                color: var(--md-sys-color-on-surface-variant);
-
-                .rating {
-                    position: relative;
-                    width: 40px;
-                    height: 40px;
-
-                    margin-top: -8px;
-                    z-index: -1;
-
-                    div {
-                        position: absolute;
-                        right: 0px;
-                    }
-
-                    .right-container {
-                        width: 50%;
-                        height: 100%;
-
-                        overflow: hidden;
-                        transform-origin: left center;
-
-                        .halfcircle {
-                            width: 200%;
-                        }
-                    }
+                    overflow: hidden;
+                    transform-origin: left center;
 
                     .halfcircle {
-                        height: 100%;
-                        width: 100%;
-                        border: solid 4px;
-                        border-color: transparent;
-                        border-radius: 50%;
-                        rotate: 45deg;
+                        width: 200%;
                     }
+                }
 
-                    &-text {
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                    }
+                .halfcircle {
+                    height: 100%;
+                    width: 100%;
+                    border: solid 4px;
+                    border-color: transparent;
+                    border-radius: 50%;
+                    rotate: 45deg;
+                }
+
+                &-text {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
             }
         }
