Minor layout changes

--- a/src/@styles/header.less
+++ b/src/@styles/header.less
@@ -12,10 +12,10 @@ header {
         &-mobile {
             fill: var(--md-sys-color-primary);
 
-            max-width: 300px;
-            padding: 60px 20px;
+            max-width: 380px;
+            padding: 40px 80px 80px;
 
-            @media (max-width: 605px) {
+            @media (max-width: 700px) {
                 max-width: 460px;
                 padding: calc(20vh - 10vw) 80px;
             }
